# catalogo_ips

./: .env.development  .env.example  .env.production  .gitignore  LISTA DE PRODUTOS.xlsx  README.md  debug_snippet.txt  index.html  manifest.json  package.json  pnpm-lock.yaml  teste.sql  teste2.sql  tmp_App.jsx  tmp_head_App.jsx
.github/workflows/: auto-tag.yml  manifest.yml  release.yml  tauri-build.yml
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/backend.egg-info/: PKG-INFO  requires.txt
data/: catalog.db
public/: manifest.sample.json
public/images/: branding.json
scripts/: build-local.ps1  gen-launches.mjs  gen-manifest-onedrive.mjs  gen-manifest-r2.mjs  gen-manifest.mjs  set-branding.mjs  sync-version.mjs  tauri-build-release.mjs  validate-manifest.mjs
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: call_img.rs  db.rs  desc.rs  importer.rs  lib.rs  lib.rs.bak  main.rs  years.rs
src/lib/: api.js  catalogData.js  catalogUtils.js  supabaseClient.js
tmp/: lancamentos.json
